chore: standardize code formatting and improve documentation - Updated Prettier and ESLint configurations for consistent code style - Added missing newlines in JSON and Markdown files - Enhanced README and documentation for better clarity - Refactored various components for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.{json,css,md,yml,yaml}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
