refactor: Enhance auth configuration with TypeScript types and improve session handling
- Added TypeScript types for Session, JWT, and NextAuthUser to improve type safety in auth.ts.
- Updated the authorize, jwt, and session callbacks to utilize these types, enhancing clarity and maintainability.
- Adjusted eslint configuration to ignore specific directories and updated linting commands in package.json for consistency.

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint .",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "lint:fix": "next lint --fix",
+    "lint:fix": "eslint --fix .",
     "prepare": "husky install"
   },
   "lint-staged": {
