--- a/package.json
+++ b/package.json
@@ -55,8 +55,11 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@stellar/freighter-api": "^4.1.0",
     "@stellar/stellar-sdk": "^13.3.0",
+    "@types/marked": "^5.0.2",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -69,6 +72,7 @@
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
+    "marked": "^16.3.0",
     "next": "^15.5.2",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
@@ -81,6 +85,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.180.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.10",
     "zustand": "^5.0.6"
