fix: dependencies issue

--- a/package.json
+++ b/package.json
@@ -109,5 +109,8 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
     "typescript": "5.9.2"
+  },
+  "optionalDependencies": {
+    "usb": "*"
   }
 }
