--- a/package.json
+++ b/package.json
@@ -112,5 +112,11 @@
   },
   "optionalDependencies": {
     "usb": "*"
+  },
+  "overrides": {
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19"
   }
 }
